Fix UserRedeemStatus::groupOfNotDone